[package]
name = "better-qs"
edition = "2021"
version = "2.3.1"
authors = ["Stanislav Panferov <fnight.m@gmail.com>", "Robert Lord <hello@lord.io>"]
description = "Rust query string parser with nesting support"
repository = "https://github.com/tyrchen/better-qs"
keywords = ["json", "web", "url", "parser"]
license = "MIT"

[features]
default = ["regex1"]
regex1 = ["regex", "lazy_static"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
percent-encoding = "2.2.0"
regex = { version = "1.7.1", optional = true }
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
